# rust-web-development

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  docker-compose.yml  log4rs.yaml  questions.json  request.http  setup.toml
example/: Cargo.toml  README.md
example/examples/: para-redis.rs
example/src/: main.rs
examples/: badwords.rs  hyper.rs
handle-errors/: Cargo.toml
handle-errors/src/: lib.rs
integration-tests/src/: main.rs
mock-server/src/: lib.rs
src/: config.rs  lib.rs  main.rs  profanity.rs  store.rs
src/routes/: answer.rs  authentication.rs  question.rs
src/types/: account.rs  answer.rs  pagination.rs  question.rs
tokio-sample/examples/: tokiomain.rs
