[package]
name = "rust-web-development"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# HTTPリクエストを行うために必要なライブラリ
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = "0.1.1"
reqwest-retry = "0.1.1"

# Webサーバーの構築
tokio = { version = "1.2", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 自作ライブラリ
handle-errors = { path = "handle-errors" }

# ログ周りを追加
# log = "0.4"
# env_logger = "0.9"
# log4rs = "1.0"
uuid = { version = "0.8", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# データベースライブラリ
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "migrate", "postgres" ] }  
