[package]
name = "rust-web-dev"
version = "1.0.0"
edition = "2021"

# http://mng.bz/WMY0
[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

# http://mng.bz/N5QD
[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# HTTPリクエストを行うために必要なライブラリ
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = "0.1.1"
reqwest-retry = "0.1.1"

# Webサーバーの構築
tokio = { version = "1.2", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 自作ライブラリ
handle-errors = { path = "handle-errors" }

# ログ周りを追加
# log = "0.4"
# env_logger = "0.9"
# log4rs = "1.0"
uuid = { version = "0.8", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# データベースライブラリ
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "migrate", "postgres" ] }  

# パスワードの暗号化
rand = "0.8"
rust-argon2 = "1.0"
paseto = "2.0"
# 有効期限の設定
chrono = "0.4.19"

# アプリケーションの設定
clap = { version = "3.1.7", features = ["derive"] }
proc-macro2 = "1.0.37"
dotenv = "0.15.0"

[build-dependencies]
platforms = "2.0.0"
